<resources>
    <string name="app_name">NeuroskyTT</string>
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="stop_monitoring">stop monitoring</string>
    <string name="start_monitoring">start monitoring</string>
    <string name="waiting_for_raw_signal">waiting for raw signal…</string>
    <string name="waiting_for_blink_signal">waiting for blink signal…</string>
    <string name="waiting_for_meditation_signal">waiting for meditation signal…</string>
    <string name="waiting_for_attention_signal">waiting for attention signal…</string>
    <string name="waiting_for_state">waiting for state…</string>
    <string name="entrena_es_contento">send data es contento</string>
    <string name="entrena_es_triste">send data es triste</string>
    <string name="entrenar">Entrenar</string>
    <string name="clasificar">Clasificar</string>
    <string name="stop_send_data">Stop sending data</string>
</resources>