<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/waiting_for_state"
            />

        <TextView
            android:id="@+id/tv_attention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/waiting_for_attention_signal"
            />

        <TextView
            android:id="@+id/tv_meditation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/waiting_for_meditation_signal"
            />

        <TextView
            android:id="@+id/tv_blink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/waiting_for_blink_signal"
            />

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            />

        <Button
            android:id="@+id/btn_start_monitoring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_monitoring"
            />

        <Button
            android:id="@+id/btn_stop_monitoring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_monitoring"
            />

        <Button
            android:id="@+id/btn_disconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            />

        <Button
            android:id="@+id/btn_contento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrena_es_contento" />

        <Button
            android:id="@+id/btn_triste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrena_es_triste" />

        <Button
            android:id="@+id/btn_stopSending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_send_data" />

        <Button
            android:id="@+id/btn_entrenar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrenar" />

        <Button
            android:id="@+id/btn_clasificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clasificar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>